the april 29 conundrum

--- a/predicting_loan_payments.ipynb
+++ b/predicting_loan_payments.ipynb
@@ -1071,8 +1071,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 80,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FECHA_PAGO\n",
+       "2016-01-11       51.37\n",
+       "2016-01-11       68.96\n",
+       "2016-01-11      143.37\n",
+       "2016-01-11      122.89\n",
+       "2016-01-12       11.13\n",
+       "2016-01-12       23.10\n",
+       "2016-03-22       41.65\n",
+       "2016-03-22       61.43\n",
+       "2016-04-29    13748.70\n",
+       "2016-04-29    10525.90\n",
+       "2016-04-29    21051.80\n",
+       "2016-04-29    23303.00\n",
+       "2016-04-29    10525.90\n",
+       "2016-04-29    27497.40\n",
+       "2016-04-29    13748.70\n",
+       "2016-04-29    19973.80\n",
+       "2016-05-11       35.56\n",
+       "2016-05-11      240.53\n",
+       "2016-05-11      362.25\n",
+       "2016-06-16       35.66\n",
+       "2016-06-16       27.24\n",
+       "Name: MCC_IMPORTE, dtype: float64"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df.MCC_IMPORTE['Jan-2016':'Jun-2016']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1140,7 +1184,7 @@
        "Freq: M, Name: MCC_IMPORTE, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
