stacked bar charts edits

--- a/stacked_bar_charts.ipynb
+++ b/stacked_bar_charts.ipynb
@@ -1084,6 +1084,97 @@
     "# Why are so many of the payments repeated twice, same day, same amount? \n",
     "clean_df['2019-03':'2019-5'].iloc[:,:3]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "508"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# there were 508 payments made in April...?\n",
+    "clean_df.MCC_IMPORTE['2019-4'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1550.8137401574802"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the average amount of the payment was 1550\n",
+    "clean_df.MCC_IMPORTE['2019-4'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compare that to 2016 (the previous outlier we looked at), when only 8 payments were made...\n",
+    "clean_df.MCC_IMPORTE['2016-4'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17546.899999999998"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ... with and a\n",
+    "clean_df.MCC_IMPORTE['2016-4'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
