--- a/stacked_bar_charts.ipynb
+++ b/stacked_bar_charts.ipynb
@@ -268,6 +268,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# first chart: all information (sums by month,  2014-)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -1102,7 +1109,7 @@
     }
    ],
    "source": [
-    "# there were 508 payments made in April...?\n",
+    "# there were 508 payments made in April, 2019...?\n",
     "clean_df.MCC_IMPORTE['2019-4'].count()"
    ]
   },
@@ -1123,7 +1130,7 @@
     }
    ],
    "source": [
-    "# the average amount of the payment was 1550\n",
+    "# the average amount of the payment was $1,550\n",
     "clean_df.MCC_IMPORTE['2019-4'].mean()"
    ]
   },
@@ -1165,16 +1172,9 @@
     }
    ],
    "source": [
-    "# ... with and a\n",
+    "# ... with and average of $17,546 pesos\n",
     "clean_df.MCC_IMPORTE['2016-4'].mean()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
