fixed the doc string

--- a/stacked_bar_charts.ipynb
+++ b/stacked_bar_charts.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "def df_special(self_one,self_two,self_three,self_four,self_five,self_six):\n",
-    "    \"\"\"This function takes three numbers (the data frame numbers) and turns them into a new data frame with information about those cuotas.\"\"\"\n",
+    "    \"\"\"This function takes six numbers (the data frame numbers) and turns them into a new data frame with information about those cuotas.\"\"\"\n",
     "    global zero_df\n",
     "    global ten_df\n",
     "    global twenty_df\n",
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# first chart: all information (sums by month,  2014-)"
+    "## first chart: all information (sums by month,  2014-2019)"
    ]
   },
   {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
