revising the folder

--- a/descriptive_analytics/better_code.ipynb
+++ b/descriptive_analytics/better_code.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stacked Bar Charts"
+    "# Better code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -1898,7 +1898,7 @@
        "[1405 rows x 66 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1915,6 +1915,25 @@
     "# We only want tipo C (credito)\n",
     "clean_df = pao_df[pao_df['MCC_TIPO_MOVIMIENTO']==\"C\"]\n",
     "clean_df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We only want tipo C (credito)\n",
+    "pao_tipo = pao_df.groupby('MCC_TIPO_MOVIMIENTO')\n",
+    "clean_df = pao_tipo.get_group('C')\n",
+    "\n"
    ]
   },
   {
