--- a/descriptive_analytics/stacked_bar_chart_2016.ipynb
+++ b/descriptive_analytics/stacked_bar_chart_2016.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -51,12 +51,9 @@
     "# add a new column called \"Period\" with the year-month format\n",
     "df['Period'] = df.index.to_period(freq='M')\n",
     "# We only want origen (PAO)\n",
-    "origen_df = df.groupby('MCC_TIPO_ORIGEN')\n",
-    "pao_df = origen_df.get_group('PAO')\n",
+    "pao_df = df[df[\"MCC_TIPO_ORIGEN\"]==\"PAO\"]\n",
     "# We only want tipo C (credito)\n",
-    "pao_tipo = pao_df.groupby('MCC_TIPO_MOVIMIENTO')\n",
-    "clean_df = pao_tipo.get_group('C')\n",
-    "# select only 2016\n",
+    "clean_df = pao_df[pao_df['MCC_TIPO_MOVIMIENTO']==\"C\"]\n",
     "clean_df = clean_df['2016-01':'2016-12']"
    ]
   },
@@ -69,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,21 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:3781: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  return super(DataFrame, self).rename(**kwargs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_three(10.0,20.0,50.0)"
    ]
@@ -150,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -267,7 +252,7 @@
        "2016-12   2223.59   1091.24    383.57"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
