found a few better code options

--- a/descriptive_analytics/strange_months.ipynb
+++ b/descriptive_analytics/strange_months.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -58,25 +58,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>MCC_OBN_ID</th>\n",
-       "      <th>MCC_TIPO_MOVIMIENTO</th>\n",
        "      <th>MCC_IMPORTE</th>\n",
-       "      <th>MCC_FECHA_BAJA</th>\n",
-       "      <th>MCC_TIPO_ORIGEN</th>\n",
-       "      <th>MCC_CCC_ID</th>\n",
-       "      <th>MCC_FECHA_MOVIMIENTO</th>\n",
-       "      <th>OBN_PERIODO</th>\n",
        "      <th>OBN_CUOTA</th>\n",
-       "      <th>OBN_TIPO_OBJETO_ID</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Unnamed: 57</th>\n",
-       "      <th>Unnamed: 58</th>\n",
-       "      <th>Unnamed: 59</th>\n",
-       "      <th>Unnamed: 60</th>\n",
-       "      <th>Unnamed: 61</th>\n",
-       "      <th>Unnamed: 62</th>\n",
-       "      <th>Unnamed: 63</th>\n",
-       "      <th>Unnamed: 64</th>\n",
-       "      <th>Unnamed: 65</th>\n",
        "      <th>Period</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -85,138 +68,51 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2014-01-06</th>\n",
-       "      <td>20130000000012823022</td>\n",
-       "      <td>C</td>\n",
-       "      <td>861.00</td>\n",
-       "      <td>01/01/1900</td>\n",
-       "      <td>PAO</td>\n",
-       "      <td>700</td>\n",
-       "      <td>06/01/2014</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2014-01</td>\n",
+       "      <th>2014-04-11</th>\n",
+       "      <td>20130000000017880233</td>\n",
+       "      <td>1943.40</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2014-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-01-10</th>\n",
-       "      <td>20130000000018770873</td>\n",
-       "      <td>C</td>\n",
-       "      <td>732.76</td>\n",
-       "      <td>01/01/1900</td>\n",
-       "      <td>PAO</td>\n",
-       "      <td>901</td>\n",
-       "      <td>10/01/2014</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2014-01</td>\n",
+       "      <th>2014-09-05</th>\n",
+       "      <td>20130000000016633320</td>\n",
+       "      <td>378.00</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2014-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-01-17</th>\n",
-       "      <td>20130000000016323372</td>\n",
-       "      <td>C</td>\n",
-       "      <td>232.42</td>\n",
-       "      <td>01/01/1900</td>\n",
-       "      <td>PAO</td>\n",
-       "      <td>CAC</td>\n",
-       "      <td>17/01/2014</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>20130000000018676823</td>\n",
+       "      <td>38.55</td>\n",
+       "      <td>10</td>\n",
        "      <td>2014-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-06-24</th>\n",
+       "      <td>20130000000021722038</td>\n",
+       "      <td>605.50</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2014-06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 66 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      MCC_OBN_ID MCC_TIPO_MOVIMIENTO  MCC_IMPORTE  \\\n",
-       "FECHA_PAGO                                                          \n",
-       "2014-01-06  20130000000012823022                   C       861.00   \n",
-       "2014-01-10  20130000000018770873                   C       732.76   \n",
-       "2014-01-17  20130000000016323372                   C       232.42   \n",
-       "\n",
-       "           MCC_FECHA_BAJA MCC_TIPO_ORIGEN MCC_CCC_ID MCC_FECHA_MOVIMIENTO  \\\n",
-       "FECHA_PAGO                                                                  \n",
-       "2014-01-06     01/01/1900             PAO        700           06/01/2014   \n",
-       "2014-01-10     01/01/1900             PAO        901           10/01/2014   \n",
-       "2014-01-17     01/01/1900             PAO        CAC           17/01/2014   \n",
-       "\n",
-       "            OBN_PERIODO  OBN_CUOTA OBN_TIPO_OBJETO_ID   ...    Unnamed: 57  \\\n",
-       "FECHA_PAGO                                              ...                  \n",
-       "2014-01-06       2014.0        0.0                  A   ...            NaN   \n",
-       "2014-01-10       2014.0       10.0                  A   ...            NaN   \n",
-       "2014-01-17       2014.0       20.0                  A   ...            NaN   \n",
-       "\n",
-       "           Unnamed: 58 Unnamed: 59  Unnamed: 60  Unnamed: 61  Unnamed: 62  \\\n",
-       "FECHA_PAGO                                                                  \n",
-       "2014-01-06         NaN         NaN          NaN          NaN          NaN   \n",
-       "2014-01-10         NaN         NaN          NaN          NaN          NaN   \n",
-       "2014-01-17         NaN         NaN          NaN          NaN          NaN   \n",
-       "\n",
-       "            Unnamed: 63  Unnamed: 64  Unnamed: 65  Period  \n",
-       "FECHA_PAGO                                                 \n",
-       "2014-01-06          NaN          NaN          NaN 2014-01  \n",
-       "2014-01-10          NaN          NaN          NaN 2014-01  \n",
-       "2014-01-17          NaN          NaN          NaN 2014-01  \n",
-       "\n",
-       "[3 rows x 66 columns]"
+       "                      MCC_OBN_ID  MCC_IMPORTE  OBN_CUOTA  Period\n",
+       "FECHA_PAGO                                                      \n",
+       "2014-04-11  20130000000017880233      1943.40         10 2014-04\n",
+       "2014-09-05  20130000000016633320       378.00         20 2014-09\n",
+       "2014-01-17  20130000000018676823        38.55         10 2014-01\n",
+       "2014-06-24  20130000000021722038       605.50         20 2014-06"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,20 +120,23 @@
    "source": [
     "# importing the data set with FECHA_PAGO as index, parse_date means we are using pandas' datetime function, datefirst adjusts for European date format\n",
     "df = pd.read_csv('auto_debt.csv', sep=',', encoding='utf-8', index_col='FECHA_PAGO', parse_dates=True, dayfirst=True)\n",
-    "# put the dates in order\n",
-    "df = df.sort_values('FECHA_PAGO')\n",
+    "df.dropna(axis='columns', how='all', inplace=True)\n",
     "# add a new column called \"Period\" with the year-month format\n",
     "df['Period'] = df.index.to_period(freq='M')\n",
     "# We only want origen (PAO)\n",
-    "pao_df = df[df[\"MCC_TIPO_ORIGEN\"]==\"PAO\"]\n",
+    "df = df.copy()[df[\"MCC_TIPO_ORIGEN\"]==\"PAO\"]\n",
     "# We only want tipo C (credito)\n",
-    "clean_df = pao_df[pao_df['MCC_TIPO_MOVIMIENTO']==\"C\"]\n",
-    "clean_df.head(3)\n"
+    "df = df[df['MCC_TIPO_MOVIMIENTO']==\"C\"]\n",
+    "# drop unnecessary columns\n",
+    "clean_df = df.drop(['MCC_TIPO_MOVIMIENTO','MCC_FECHA_BAJA','MCC_TIPO_ORIGEN','MCC_CCC_ID','MCC_FECHA_MOVIMIENTO','OBN_PERIODO','OBN_TIPO_OBJETO_ID','OBN_OBJETO_ID','FECHA_PROCESO','OBJETO'], axis=1)\n",
+    "# git rid of this annoying decimal in the name of the cuotas\n",
+    "clean_df['OBN_CUOTA'] = clean_df.OBN_CUOTA.astype(int)\n",
+    "clean_df.head(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +243,7 @@
        "2019-04    508   1550      95  138440"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +270,7 @@
        "1405"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1600.8557437722445"
+       "1600.8557437722452"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +312,7 @@
        "138440.4"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +333,7 @@
        "180.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,16 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6229.354161071131"
+       "6229.354161071126"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +442,7 @@
        "Freq: M, Name: MCC_IMPORTE, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +523,7 @@
        "Freq: M, Name: MCC_IMPORTE, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +606,7 @@
        "Freq: M, Name: MCC_IMPORTE, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +686,7 @@
        "Freq: M, Name: MCC_IMPORTE, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +766,7 @@
        "Freq: M, Name: MCC_IMPORTE, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
