now with better code; classes DRY

--- a/descriptive_analytics/stacked_bar_charts_complete.ipynb
+++ b/descriptive_analytics/stacked_bar_charts_complete.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stacked Bar Charts with complete version of the data set"
+    "# Stacked Bar Charts (revised with better code!!!)\n",
+    "## Practice datawrangling and visualization with pandas and matplotlib\n",
+    "### dataset: tax data from Argentina"
    ]
   },
   {
@@ -26,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data wrangling: \n"
+    "## Data import and cleaning\n"
    ]
   },
   {
@@ -353,20 +355,101 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create a new data frame of payments seperated by cuotas"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MCC_OBN_ID</th>\n",
+       "      <th>MCC_IMPORTE</th>\n",
+       "      <th>OBN_CUOTA</th>\n",
+       "      <th>Period</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FECHA_PAGO</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-04-10</th>\n",
+       "      <td>20190000000030211407</td>\n",
+       "      <td>655.52</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2019-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-15</th>\n",
+       "      <td>20190000000032832543</td>\n",
+       "      <td>2326.27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-05-10</th>\n",
+       "      <td>20190000000034011507</td>\n",
+       "      <td>210.73</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-05-23</th>\n",
+       "      <td>20190000000035197532</td>\n",
+       "      <td>634.13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2019-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-22</th>\n",
+       "      <td>20190000000036404391</td>\n",
+       "      <td>598.13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2019-04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      MCC_OBN_ID  MCC_IMPORTE  OBN_CUOTA   Period\n",
+       "FECHA_PAGO                                                       \n",
+       "2019-04-10  20190000000030211407       655.52          3  2019-04\n",
+       "2019-01-15  20190000000032832543      2326.27          0  2019-01\n",
+       "2019-05-10  20190000000034011507       210.73          4  2019-05\n",
+       "2019-05-23  20190000000035197532       634.13          9  2019-05\n",
+       "2019-04-22  20190000000036404391       598.13          3  2019-04"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "indexed = clean_df.set_index('Period')\n",
-    "cuota_group2 = indexed.groupby('OBN_CUOTA')"
+    "clean_df.head()"
    ]
   },
   {
@@ -375,74 +458,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def df_special(self_one,self_two,self_three,self_four,self_five,self_six,self_seven,self_eight,self_nine,self_ten,self_eleven,self_twelve,self_thirteen,self_fourteen,self_fifteen,self_sixteen,self_seventeen,self_eighteen,self_nineteen):\n",
-    "    \"\"\"This function takes 19 numbers (the data frame numbers) and turns them into a new data frame with information about those cuotas.\"\"\"\n",
-    "    global zero_df\n",
-    "    global one_df\n",
-    "    global two_df\n",
-    "    global three_df\n",
-    "    global four_df\n",
-    "    global five_df\n",
-    "    global six_df\n",
-    "    global seven_df\n",
-    "    global eight_df\n",
-    "    global nine_df\n",
-    "    global ten_df\n",
-    "    global eleven_df\n",
-    "    global twelve_df\n",
-    "    global twenty_df\n",
-    "    global thirty_df\n",
-    "    global forty_df\n",
-    "    global fifty_one_df\n",
-    "    global ninety_df\n",
-    "    cuotas = [self_one, self_two, self_three, self_four, self_five, self_six, self_seven, self_eight, self_nine, self_ten, self_eleven, self_twelve, self_thirteen, self_fourteen, self_fifteen, self_sixteen, self_seventeen, self_eighteen, self_nineteen]\n",
-    "    for i in cuotas:        \n",
-    "        x = cuota_group2.get_group(i)\n",
-    "        name = str(i)      \n",
-    "        name = 'Cuota_'+name[:-2]\n",
-    "        x.rename(index=str, columns={\"MCC_IMPORTE\":name}, inplace=True)\n",
-    "        x_series = x.groupby('Period').sum()\n",
-    "        x_series = x_series.iloc[:,:1]\n",
-    "        if i == 0.0:\n",
-    "            zero_df = pd.DataFrame(x_series)\n",
-    "        if i == 1.0:\n",
-    "            one_df = pd.DataFrame(x_series)\n",
-    "        if i == 2.0:\n",
-    "            two_df = pd.DataFrame(x_series)\n",
-    "        if i == 3.0:\n",
-    "            three_df = pd.DataFrame(x_series)\n",
-    "        if i == 4.0:\n",
-    "            four_df = pd.DataFrame(x_series)\n",
-    "        if i == 5.0:\n",
-    "            five_df = pd.DataFrame(x_series)\n",
-    "        if i == 6.0:\n",
-    "            six_df = pd.DataFrame(x_series)\n",
-    "        if i == 7.0:\n",
-    "            seven_df = pd.DataFrame(x_series)\n",
-    "        if i == 8.0:\n",
-    "            eight_df = pd.DataFrame(x_series)\n",
-    "        if i == 9.0:\n",
-    "            nine_df = pd.DataFrame(x_series)\n",
-    "        if i == 10.0:\n",
-    "            ten_df = pd.DataFrame(x_series)\n",
-    "        if i == 11.0:\n",
-    "            eleven_df = pd.DataFrame(x_series)\n",
-    "        if i == 12.0:\n",
-    "            twelve_df = pd.DataFrame(x_series)\n",
-    "        if i == 20.0:\n",
-    "            twenty_df = pd.DataFrame(x_series)\n",
-    "        if i == 30.0:\n",
-    "            thirty_df = pd.DataFrame(x_series)\n",
-    "        if i == 40.0:\n",
-    "            forty_df = pd.DataFrame(x_series)\n",
-    "        if i == 50.0:\n",
-    "            fifty_df = pd.DataFrame(x_series)\n",
-    "        if i == 51.0:\n",
-    "            fifty_one_df = pd.DataFrame(x_series)\n",
-    "        if i == 90.0:\n",
-    "            ninety_df = pd.DataFrame(x_series)    \n",
-    "        \n",
-    "    merge_three(zero_df,one_df,two_df,three_df,four_df,five_df,six_df,seven_df,eight_df,nine_df,ten_df,eleven_df,twelve_df,twenty_df,thirty_df,forty_df,fifty_df,fifty_one_df,ninety_df) "
+    "indexed = clean_df.set_index('Period') # change index to \"Period\" (month + year)\n",
+    "cuota_group = indexed.groupby('OBN_CUOTA')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class dataframing by cuota"
    ]
   },
   {
@@ -451,47 +475,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def merge_three(self_uno,self_dos, self_tres, self_cuatro, self_cinco, self_seis, self_siete, self_ocho, self_nueve, self_diez, self_once, self_doce, self_trece, self_catorce, self_quince, self_dieciseis, self_diecisiete, self_dieciocho, self_diecinueve):\n",
-    "    global merged\n",
-    "    global merged_1\n",
-    "    global merged_2\n",
-    "    global merged_3\n",
-    "    global merged_4\n",
-    "    global merged_5\n",
-    "    global merged_6\n",
-    "    global merged_7\n",
-    "    global merged_8\n",
-    "    global merged_9\n",
-    "    global merged_10\n",
-    "    global merged_11\n",
-    "    global merged_12\n",
-    "    global merged_13\n",
-    "    global merged_14\n",
-    "    global merged_15\n",
-    "    global merged_16\n",
-    "    global merged_17\n",
-    "    global merged_18\n",
-    "    global merged_total\n",
-    "    global new_df\n",
-    "    merged = pd.merge(self_uno, self_dos, on='Period', how='outer')\n",
-    "    merged_1 = pd.merge(merged,self_tres, on='Period', how='outer')\n",
-    "    merged_2 = pd.merge(merged_1,self_cuatro, on='Period', how='outer')\n",
-    "    merged_3 = pd.merge(merged_2,self_cinco, on='Period', how='outer')\n",
-    "    merged_4 = pd.merge(merged_3,self_seis, on='Period', how='outer')\n",
-    "    merged_5 = pd.merge(merged_4,self_siete, on='Period', how='outer')\n",
-    "    merged_6 = pd.merge(merged_5,self_ocho, on='Period', how='outer')\n",
-    "    merged_7 = pd.merge(merged_6,self_nueve, on='Period', how='outer')\n",
-    "    merged_8 = pd.merge(merged_7,self_diez, on='Period', how='outer')\n",
-    "    merged_9 = pd.merge(merged_8,self_once, on='Period', how='outer')\n",
-    "    merged_10 = pd.merge(merged_9,self_doce, on='Period', how='outer')\n",
-    "    merged_11 = pd.merge(merged_10,self_trece, on='Period', how='outer')\n",
-    "    merged_12 = pd.merge(merged_11,self_catorce, on='Period', how='outer')\n",
-    "    merged_13 = pd.merge(merged_12,self_quince, on='Period', how='outer')\n",
-    "    merged_14 = pd.merge(merged_13,self_dieciseis, on='Period', how='outer')\n",
-    "    merged_15 = pd.merge(merged_14,self_diecisiete, on='Period', how='outer')\n",
-    "    merged_16 = pd.merge(merged_15,self_dieciocho, on='Period', how='outer')\n",
-    "    merged_total = pd.merge(merged_16,self_diecinueve, on='Period', how='outer')\n",
-    "    new_df = merged_total.sort_index()"
+    "class dataframing():\n",
+    "    \n",
+    "    \"\"\"This class takes our tax payment data and rearranges it into one large dataframe grouped by monthly sums for each cuota (payment category).\n",
+    "       Executing the dataframes_by_cuota to make the magic happen.\"\"\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        print(\"datawrangling...\")\n",
+    "        \n",
+    "    \n",
+    "    def dataframes_by_cuota(self, my_data_frame):\n",
+    "        combine = {}\n",
+    "        df_list = []\n",
+    "        for i in my_data_frame['OBN_CUOTA'].unique(): \n",
+    "            y = float(i)\n",
+    "            x = my_data_frame.get_group(y)\n",
+    "            string = str(i)\n",
+    "            nombre = string[1:-1]\n",
+    "            new_name = 'Cuota_'+nombre\n",
+    "            x.rename(index=str, columns={\"MCC_IMPORTE\":new_name}, inplace=True)\n",
+    "            x_series = x.groupby('Period').sum() # sum by month (period) and cuota\n",
+    "            x_series = x_series.iloc[:,:1] # this just gets rid of the 'OBN_CUOTA' column that we don't need anymore\n",
+    "            df_list.append(x_series)\n",
+    "            \n",
+    "            merged = None # merge the new dataframes into one large dataframe\n",
+    "            for data in df_list:\n",
+    "                if merged is None:\n",
+    "                    merged = data\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    merged = pd.merge(merged, data, on='Period', how='outer')\n",
+    "        print(\"Finished!\")\n",
+    "        return merged        "
    ]
   },
   {
@@ -499,6 +514,13 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "datawrangling...\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -509,10 +531,18 @@
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  return super(DataFrame, self).rename(**kwargs)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished!\n"
+     ]
     }
    ],
    "source": [
-    "df_special(0.0,1.0,2.0,3.0,4.0,5.0,6.0,7.0,8.0,9.0,10.0,11.0,12.0,20.0,30.0,40.0,50.0,51.0,90.0)"
+    "timeseries_practice = dataframing() # initiate the class\n",
+    "new_df = timeseries_practice.dataframes_by_cuota(cuota_group).sort_index()"
    ]
   },
   {
@@ -1224,7 +1254,7 @@
     "# y-axis in bold\n",
     "rc('font', weight='bold')\n",
     "\n",
-    "df_2019 = new_df['2019-01':'2019-5']\n",
+    "df_2019 = new_df['2019-01':'2019-05']\n",
     "\n",
     "# Heights\n",
     "indx = df_2019.index.astype(str)\n",
@@ -1547,6 +1577,13 @@
     "# Here you can see the largest payment in the data set was made 11 March 2019, Cuota 0.\n",
     "clean_df['2019-03':'2019-03'].head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
